[package]
name = "read-fb-send-keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    # "Win32_UI_KeyboardAndMouseInput",
]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }